[Sync] WorkerEntityTracker: Ensure that update and commit response have valid id.

This change enforces the check in ModelTypeWorker::AdjustCommitProto ensuring
that id is set to valid string.

R=maxbogue@chromium.org
BUG=672100

step

Review-Url: https://codereview.chromium.org/2562673003
Cr-Commit-Position: refs/heads/master@{#437411}

Former-commit-id: 46bb6daf3f67cc9f04ddc14b165cb3c40a6ed7b0